# feather-ui

./: .gitignore  Cargo.toml  README.md  REUSE.toml  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  nix-flake.check.yml
feather-macro/: Cargo.toml
feather-macro/src/: lib.rs
feather-ui/: Cargo.toml  b-tree.alc  feather.alc  rrb-vector.alc
feather-ui/examples/: basic-rs.rs  graph-rs.rs  grid-rs.rs  image-rs.rs  list-rs.rs  paragraph-rs.rs  textbox-rs.rs
feather-ui/examples/basic-alc/: Cargo.toml  basic.rs  layout.alc
feather-ui/examples/calculator-alc/: Cargo.toml  build.rs  layout.alc
feather-ui/examples/calculator-alc/src/: calculator.udl  main.rs
feather-ui/examples/calculator-rs/: Cargo.toml  build.rs  calculator-cs.sln
feather-ui/examples/calculator-rs/src/: bin.rs  calculator.toml  calculator.udl  lib.rs
feather-ui/src/: color.rs  draw.rs  editor.rs  graphics.rs  input.rs  lib.rs  lua.rs  persist.rs  propbag.rs  resource.rs  rtree.rs  text.rs  util.rs
feather-ui/src/component/: button.rs  domain_line.rs  domain_point.rs  flexbox.rs  gridbox.rs  image.rs  line.rs  listbox.rs  mod.rs  mouse_area.rs  paragraph.rs  region.rs  scroll_area.rs  shape.rs  text.rs  textbox.rs  window.rs
feather-ui/src/layout/: base.rs  domain_write.rs  fixed.rs  flex.rs  grid.rs  leaf.rs  list.rs  mod.rs  root.rs  text.rs
feather-ui/src/render/: atlas.rs  compositor.rs  image.rs  line.rs  mod.rs  shape.rs  text.rs  textbox.rs
feather-ui/src/render/domain/: line.rs  mod.rs
feather-ui/src/shaders/: compositor.wgsl  feather.wgsl  mipmap.wgsl  mod.rs  shape.wgsl
