# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2025 Fundament Software SPC <https://fundament.software>

[package]
name = "feather-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["Erik McClure <erikm@fundament.software>"]
description = """
Feather UI library
"""
homepage.workspace = true
repository = "https://github.com/Fundament-Software/feathergui/tree/main/feather-ui"
readme.workspace = true
keywords = ["ui", "interface", "graphics", "gpu"]
license.workspace = true

[lib]
path = "src/lib.rs"
doctest = false

[features]
default = ["lua", "default-formats", "svg"]
lua = ["dep:mlua"]
svg = ["dep:resvg"]
default-formats = [
  "avif",
  "bmp",
  "dds",
  "exr",
  "ff",
  "gif",
  "hdr",
  "ico",
  "jpeg",
  "png",
  "pnm",
  "qoi",
  "tga",
  "tiff",
  "webp",
]
rayon = ["image?/rayon", "fast_image_resize?/rayon"]
avif = ["dep:image", "image/avif", "fast_image_resize/image"]
bmp = ["dep:image", "image/bmp", "fast_image_resize/image"]
dds = ["dep:image", "image/dds", "fast_image_resize/image"]
exr = ["dep:image", "image/exr", "fast_image_resize/image"]
ff = ["dep:image", "image/ff", "fast_image_resize/image"]
gif = ["dep:image", "image/gif", "fast_image_resize/image"]
hdr = ["dep:image", "image/hdr", "fast_image_resize/image"]
ico = ["dep:image", "image/ico", "fast_image_resize/image"]
jpeg = ["dep:load_image", "load_image/jpeg"]
png = ["dep:load_image", "load_image/zlibrs"]
pnm = ["dep:image", "image/pnm", "fast_image_resize/image"]
qoi = ["dep:image", "image/qoi", "fast_image_resize/image"]
tga = ["dep:image", "image/tga", "fast_image_resize/image"]
tiff = ["dep:image", "image/tiff", "fast_image_resize/image"]
webp = ["dep:image", "image/webp", "fast_image_resize/image"]
vello = ["dep:vello"]
vello-svg = ["dep:vello_svg"]

[dependencies]
im.workspace = true
wgpu.workspace = true
winit.workspace = true
eyre.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ultraviolet.workspace = true
dyn-clone = "1.0"
derive-where = "1.2.7"
enum_variant_type = "0.3.1"
smallvec = { version = "1.13", features = ["union", "const_generics"] }
thiserror = "2.0"
feather-macro.workspace = true
derive_more = { version = "2.0.1", features = ["try_from"] }
wide = "0.7.32"
alloca = "0.4.0"
unicode-segmentation = "1.12.0"
arboard = { version = "3.5.0", features = ["wayland-data-control"] }
parking_lot = { version = "0.12.3", features = [
  "hardware-lock-elision",
  "arc_lock",
] }
static_assertions = "1.1.0"
windows-sys = { version = "0.59.0", features = [
  "Win32_UI_WindowsAndMessaging",
] }
bytemuck = "1.23.0"
cosmic-text.workspace = true
guillotiere = "0.6.2"
notify = "8.0.0"
futures-lite = "2.6.0"
num-traits = "0.2.19"
swash = "0.2.5"
bitfield-struct = "0.11.0"
mlua = { version = "0.10", features = [
  "luajit52",
  "vendored",
], optional = true }
image = { version = "0.25.6", optional = true, default-features = false }
resvg = { version = "0.45.1", optional = true }
vello = { version = "0.5.0", optional = true }
vello_svg = { version = "0.7.1", optional = true }
load_image = { version = "3.3.0", optional = true, default-features = false, features = [
  "lcms2-static",
] }
fast_image_resize = { version = "5.2.1", optional = true, features = ["image"] }

[lints.clippy]
too_many_arguments = { level = "allow" }
